--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Nunito", sans-serif;
+    color: #212529;
+}
+
+:root {
+    --size-1: 3rem; /* 48 */
+    --size-2: 2.75rem; /* 44 */
+    --size-3: 2.5rem; /* 40 */
+    --size-4: 2.25rem; /* 36 */
+    --size-5: 2rem; /* 32 */
+    --size-6: 1.75rem; /* 28 */
+    --size-7: 1.5rem; /* 24 */
+    --size-8: 1.25rem; /* 20 */
+    --size-9: 1rem; /* 16 */
+    --size-10: 0.75rem; /* 12 */
+    --size-11: 0.5rem; /* 08 */
+    --size-12: 0.25rem; /* 04 */
+    --size-13: 0.125rem; /* 02 */
+    --size-14: 0.0625rem; /* 01 */
+
+    --color-primary-1: #fd377e;
+    --color-primary-2: #e34981;
+    --color-secondary-1: #03b898;
+    --gray-1: #f8f9fa;
+    --gray-2: #e9ecef;
+    --gray-3: #868e96;
+    --gray-4: #212529;
+
+    --title-1: 1.75rem; /* 28 */
+    --title-2: 1.5rem; /* 24 */
+    --title-3: 1.25rem; /* 20 */
+    --title-4: 0.75rem; /* 12 */
+    --headline: 1rem; /* 16 */
+    --body: 0.75rem; /* 12 */
+    --line-height: 150%;
+
+    --font-weight-1: 700;
+    --font-weight-2: 600;
+    --font-weight-3: 500;
+    --font-weight-4: 400;
+
+    --radius: 0.5rem;
+
+    --button-height-1: 3rem; /* 48 */
+    --button-height-2: 2.5rem; /* 40 */
+
+    --input-select-height-1: 3.3rem; /* 52.8 */
+    --input-select-height-2: 3rem; /* 48 */
+
+    --padding-btn-1: 0 1.25rem; /* 20 */
+    --padding-btn-2: 0 0.9375rem; /* 15 */
+
+    --font-family: "Nunito", sans-serif;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+.show {
+    display: flex;
+}
+
+.hide {
+    display: none;
+}
+
+.container {
+    width: 23.4375rem;
+    margin: 0 auto;
+    padding: 0 0.9375rem;
+}
+
+@media (min-width: 72.49rem) {
+    .container {
+        width: 64.9375rem;
+        padding: 0 6.25rem;
+    }
 }
