feat: create landPage and code css for landPage

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&display=swap");
 
 * {
     margin: 0;
@@ -33,7 +33,10 @@
     --gray-2: #e9ecef;
     --gray-3: #868e96;
     --gray-4: #212529;
+    --white: #ffffff;
+    --black: #000000;
 
+    --landPageTitle: 2.375rem; /* 28 */
     --title-1: 1.75rem; /* 28 */
     --title-2: 1.5rem; /* 24 */
     --title-3: 1.25rem; /* 20 */
@@ -42,6 +45,7 @@
     --body: 0.75rem; /* 12 */
     --line-height: 150%;
 
+    --landPageWeight: 800;
     --font-weight-1: 700;
     --font-weight-2: 600;
     --font-weight-3: 500;
