--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 } */
 
-.App-header {
+/* .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -11,4 +11,4 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-}
+} */
