--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,11 @@
 
     --radius: 0.5rem;
 
+    --button-border: 0.0875rem;
+
     --button-height-1: 3rem; /* 48 */
     --button-height-2: 2.5rem; /* 40 */
+    --button-height-3: 1.375rem; /* 22 */
 
     --input-select-height-1: 3.3rem; /* 52.8 */
     --input-select-height-2: 3rem; /* 48 */
