--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -7,11 +7,13 @@
     font-size: 0.875rem;
     font-weight: var(--font-weight-2);
     color: var(--gray-4);
+    transition: 0.2s ease;
     cursor: pointer;
 }
 
 .btn_gray_small:hover {
     background-color: var(--gray-3);
+    border: var(--button-border) solid var(--gray-3);
     color: var(--white);
 }
 
@@ -24,11 +26,13 @@
     font-size: 0.875rem;
     font-weight: var(--font-weight-2);
     color: var(--white);
+    transition: 0.2s ease;
     cursor: pointer;
 }
 
 .btn_primary_small:hover {
     background-color: var(--color-primary-2);
+    border: var(--button-border) solid var(--color-primary-2);
 }
 
 .btn_primary_large {
@@ -40,27 +44,30 @@
     font-size: var(--headline);
     font-weight: var(--font-weight-2);
     color: var(--white);
+    transition: 0.2s ease;
     cursor: pointer;
 }
 
 .btn_primary_large:hover {
     background-color: var(--color-primary-2);
+    border: var(--button-border) solid var(--color-primary-2);
 }
 
 .btn_trash {
     height: var(--button-height-3);
     width: var(--button-height-3);
-    padding: var(--padding-btn-2);
     background-color: var(--gray-2);
     background-image: url(../assets/trash_gray.svg);
     background-repeat: no-repeat;
     background-position: center;
     border: var(--button-border) solid var(--gray-2);
-    border-radius: var(--radius);
+    border-radius: 0.125rem;
+    transition: 0.2s ease;
     cursor: pointer;
 }
 
 .btn_trash:hover {
     background-color: var(--gray-3);
+    border: var(--button-border) solid var(--gray-3);
     background-image: url(../assets/trash_white.svg);
 }
