--- a/src/components/HomePage/styles.css
+++ b/src/components/HomePage/styles.css
@@ -6,133 +6,10 @@ main {
     margin-top: 2.4375rem;
 }
 
-/* aside */
-
-/* form {
-    display: flex;
-    flex-direction: column;
-    width: 22.6875rem;
-    border: 0.0625rem solid var(--gray-2);
-    border-radius: var(--radius);
-    padding: 2.375rem 1.5rem;
-    margin-bottom: 1rem;
-} */
-
-/* form label {
-    font-size: var(--title-4);
-    font-weight: var(--font-weight-4);
-    line-height: var(--line-height);
-    color: var(--gray-4);
-    margin-bottom: 0.75rem;
-} */
-
-/* .inputDescription {
-    height: var(--input-select-height-1);
-    font-size: var(--headline);
-    font-weight: var(--font-weight-4);
-    line-height: var(--line-height);
-    color: var(--gray-3);
-    padding: 0 1rem;
-    margin-bottom: 0.25rem;
-    background-color: var(--gray-1);
-    border: 0.125rem solid var(--gray-1);
-    border-radius: var(--radius);
-} */
-
-/* .exemple {
-    font-size: var(--body);
-    font-weight: var(--font-weight-4);
-    line-height: var(--line-height);
-    color: var(--gray-3);
-    margin-bottom: 1rem;
-} */
-
-/* .valueTypeOfValue {
-    display: flex;
-    gap: 2.25rem;
-    margin-bottom: 1.25rem;
-} */
-
-/* .valueLabelInput {
-    width: 8rem;
-    height: 4.9375rem;
-    display: flex;
-    flex-direction: column;
-} */
-
-/* .valueLabelInput input {
-    height: var(--input-select-height-2);
-    padding-left: 1rem;
-    background-color: var(--gray-1);
-    border: 0.125rem solid var(--gray-1);
-    border-radius: var(--radius);
-    font-size: var(--headline);
-    font-weight: var(--font-weight-4);
-    color: var(--gray-3);
-} */
-
-/* .typeOfValue {
-    width: 8rem;
-    height: 4.9375rem;
-    display: flex;
-    flex-direction: column;
-} */
-
-/* .typeOfValue select {
-    height: var(--input-select-height-2);
-    padding: 0 1rem;
-    background-color: var(--gray-1);
-    border: 0.125rem solid var(--gray-1);
-    border-radius: var(--radius);
-    font-size: var(--title-4);
-    font-weight: var(--font-weight-4);
-    color: var(--gray-4);
-    cursor: pointer;
-} */
-
-/* total container */
-
-/* .totalContainer {
-    width: 22.6875rem;
-    height: 6rem;
-    border: 0.0625rem solid var(--gray-2);
-    border-radius: var(--radius);
-    padding: 1.25rem 1.5rem;
-} */
-
-/* .totalTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-} */
-
-/* .totalTop h2 {
-    font-size: var(--headline);
-    font-weight: var(--font-weight-1);
-    line-height: var(--line-height);
-    color: var(--gray-4);
-    margin-bottom: 1rem;
-} */
-
-/* .totalTop span {
-    font-size: var(--headline);
-    font-weight: var(--font-weight-1);
-    line-height: var(--line-height);
-    color: var(--color-primary-1);
-    margin-bottom: 1rem;
-} */
-
-/* .totalContainer p {
-    font-size: var(--body);
-    font-weight: var(--font-weight-4);
-    line-height: var(--line-height);
-    color: var(--gray-4);
-} */
-
 /* resumeHeader */
 
 .financialResume {
-    width: 35.125rem;
+    width: 33.125rem;
     margin-top: 2.4375rem;
 }
 
@@ -155,63 +32,15 @@ main {
     gap: 1rem;
 }
 
-.noCards {
-    display: flex;
-    flex-direction: column;
+@media (max-width: 72.49rem) {
+    main {
+        flex-direction: column;
+    }
+    .resumeHeader {
+        flex-direction: column;
+    }
+    .financialResume {
+        align-self: center;
+        max-width: 100%;
+    }
 }
-
-.noCards p {
-    font-size: var(--button-height-3);
-    font-weight: var(--font-weight-1);
-    line-height: var(--line-height);
-    color: var(--gray-4);
-}
-
-/* .cards {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-} */
-
-/* .card {
-    height: 5.5rem;
-    background-color: var(--gray-1);
-    border-radius: var(--radius) 0 0 var(--radius);
-    padding: 0.5rem 1.125rem;
-    transition: 0.3s ease;
-} */
-
-/* .cardEntries {
-    border-left: 0.5rem solid var(--color-secondary-1);
-} */
-
-/* .cardExpenses {
-    border-left: 0.5rem solid var(--gray-2);
-} */
-
-/* .card:hover {
-    transform: translateY(-0.125rem);
-    background-color: var(--white);
-    box-shadow: 0px 4px 42px -12px rgba(0, 0, 0, 0.25);
-} */
-
-/* .cardTop {
-    display: flex;
-    justify-content: space-between;
-} */
-
-/* .card h2 {
-    font-size: var(--headline);
-    font-weight: var(--font-weight-1);
-    line-height: var(--line-height);
-    color: var(--gray-4);
-} */
-
-/* .valueTrash {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    width: 9.9375rem;
-    display: flex;
-    justify-content: space-between;
-} */
